<resources>
    <string name="app_name">Sendinaden</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <!-- Menu names. -->
    <string name="new_session">New Session</string>
    <string name="exercises">Exercises</string>
    <string name="session_history">Session History</string>
    <!-- Categories names. -->
    <string name="yoga">Yoga &amp; Stretching</string>
    <string name="running">Running or High Energy</string>
    <string name="relax">Relaxation &amp; Meditation</string>
    <string name="commute">Walking or Commute</string>
    <string name="sleep">Sleep</string>
    <string name="work">Work &amp; Concentration</string>
    <string name="splash_screen">Splash screen</string>
    <!-- Fragments names. -->
    <string name="empty_exercise">Exercises coming soon !</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">test</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="done">Done</string>

    <!-- Feedback strings -->
    <string name="calmness">Calmness</string>
    <string name="calmess_bad">not at all</string>
    <string name="calmness_good">very calm</string>
    <string name="comfort">Comfort</string>
    <string name="comfort_bad">discomfort</string>
    <string name="comfort_good">very comfortable</string>
    <string name="energetic">Energetic</string>
    <string name="energitic_bad">not at all</string>
    <string name="energetic_good">very energetic</string>
    <string name="overall">Overall feeling?</string>
    <string name="overall_bad">bad</string>
    <string name="overall_good">great !</string>
    <string name="feedback_total_text">Total feedback</string>
    <string name="pref_connectivity_title">Connectivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->


    <string name="pref_device_title">Device</string>
    <string name="pref_device_summary">Something</string>
    <string name="pref_device_default">None</string>

    <!-- String related to the features we extract-->
    <string name="depth">Depth (%)</string>
    <string name="bpm">Breath/min</string>
    <string name="balance">Inhale vs Exhale</string>
    <string name="dominance">Mouth vs Nose</string>
    <string name="unknown_device">Unknown</string>
    <string name="title_available_bt_devices">Available</string>


</resources>
